# ProjectEuler

./: .gitignore  CMakeLists.txt  Problem.cpp  Problem.h  main.cpp
.github/workflows/: c-cpp.yml
Problems/: Controller.cpp  Controller.h  Problem.h  Problem_1.cpp  Problem_1.h  Problem_2.cpp  Problem_2.h  Problem_3.cpp  Problem_3.h  Problem_4.cpp  Problems.cpp  User.cpp  User.h  Users.h  problem_list.h  problem_ref.h
Problems/LegenDaVinci/: LegenDaVinci.cpp  LegenDaVinci.h  Problem_10.cpp  Problem_11.cpp  Problem_12.cpp  Problem_3.cpp  Problem_5.cpp  Problem_6.cpp  Problem_7.cpp  Problem_8.cpp  Problem_9.cpp
Problems/kabra4/: Kabra4.cpp  Kabra4.h  Problem_1.cpp  Problem_2.cpp  Problem_21.cpp  Problem_23.cpp  Problem_24.cpp  Problem_25.cpp  Problem_26.cpp  Problem_27.cpp  Problem_28.cpp  Problem_4.cpp  Testing_0.cpp  testingPrime.cpp
References/: Problem.h  User.h  lib.h  utils.h
lib/: BigInt.cpp  Number.cpp  Number.h  Prime.cpp  Prime.h  Strings.cpp
